web/app/src/assets/base.css
/* ... */
.btn-bar-group .btn-bar {
  padding: 0;
}

label {
  display: block;
}

fieldset {
  background-color: var(--color-background-column-highlight);
  border: none;
  margin-bottom: var(--spacer);
  border-radius: var(--border-radius);
}

input[type="text"],
input[type="number"] {
  appearance: none;
  background-color: var(--color-background);
  border-radius: var(--border-radius);
  border: var(--border-width) solid var(--border-color);
  box-sizing: border-box;
  display: block;
  outline: none;
  padding: var(--spacer-sm);
  transition: border-color var(--transition-speed) ease-in-out;
  width: 100%;
}

input[type="text"]:focus,
input[type="number"]:focus {
  border-color: var(--color-accent);
}

input[type="text"].is-invalid,
input[type="number"].is-invalid {
  border-color: var(--color-danger);
}

.input-help-text {
  display: inline-block;
}
.input-help-text, .hint {
  color: var(--color-text-muted);
  font-size: var(--font-size-sm);
  margin: var(--spacer-xs);
}

select {
  background-color: var(--color-button-background);
  border-radius: var(--border-radius);
  border: calc(var(--border-width) / 2) solid var(--color-button-background);
  display: inline-flex;
  font-size: var(--font-size-sm);
  justify-content: center;
  padding: var(--spacer-xs) var(--spacer-sm);
}

button, input[type='button'], .btn {
  align-items: center;
  background-color: var(--color-button-background);
  border-radius: var(--border-radius);
  border: var(--border-width) solid var(--color-button-background);
  color: var(--color-button);
  cursor: pointer;
  display: inline-flex;
  font-size: var(--font-size-sm);
  justify-content: center;
  padding: var(--spacer-xs) var(--spacer-sm);
  touch-action: manipulation;
  transition-duration: var(--transition-speed);
  transition-property: background-color, border-color, color;
  user-select: none;
}

.btn-lg {
  font-size: var(--font-size-base);
}

.btn-bar.btn-bar-wide {
  justify-content: space-between;
  width: 100%;
}


button[disabled],
input[type='button'][disabled],
.btn[disabled] {
  background-color: transparent;
  border-color: var(--color-button-background);
  color: var(--color-text-muted);
  opacity: .5;
  pointer-events: none;
}

button:hover:not([disabled]),
input[type='button']:hover:not([disabled]),
.btn:hover:not([disabled]) {
  transition: all 100ms;
  color: white;
}

button:focus,
.btn:focus {
  /* Make sure the outline is clearly visible inside the button. */
  outline-offset: -0.5em;
}

.btn-primary {
  background-color: var(--color-accent-background);
  border-color: var(--color-accent-background);
  color: var(--color-accent-text);
}

.btn-primary:hover {
  background-color: var(--color-accent);
  border-color: var(--color-accent);
  color: var(--color-accent-text);
}

.btn-secondary {
  background-color: transparent;
  color: var(--color-text-muted);
  border-color: var(--color-text-muted);
}

.btn-secondary:hover {
  border-color: var(--color-text);
  color: var(--color-text);
}

.btn-bar .btn.dangerous {
  background-color: #7c4d41;
  color: #e4c5c0;
  margin-left: 1rem;
}

.btn-bar .btn.dangerous[disabled] {
  background-color: #53413e;
}

.details-no-item-selected {
  align-items: center;
  color: var(--color-text-hint);
  display: flex;
  user-select: none;
  height: 50%;
  justify-content: center;
}

.indicator {
  --indicator-color: var(--color-background);
  --indicator-size: 6px;

  background-color: var(--indicator-color);
  border: calc(var(--indicator-size)/2) solid var(--indicator-color);
  border-radius: 50%;
  display: inline-block;
  height: var(--indicator-size);
  vertical-align: middle;
  width: var(--indicator-size);
}

.status-filter-bar {
  align-items: center;
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.status-filter-indicator {
  cursor: pointer;
  margin: .2rem;
}

.status-filter-indicator .indicator {
  --indicator-size: 10px;
  transition: transform var(--transition-speed-fast) ease-in-out;
}

.status-filter-indicator .indicator:hover {
  transform: scale(1.2)
}

.is-filtered .status-filter-indicator {
  opacity: .33;
}

.status-filter-indicator.active {
  opacity: 1.0;
}

.status-active {
  --indicator-color: var(--color-status-active);
}
.status-canceled {
  --indicator-color: var(--color-status-canceled);
}
.status-completed {
  --indicator-color: var(--color-status-completed);
}
.status-construction-failed {
  --indicator-color: var(--color-status-construction-failed);
}
.status-failed {
  --indicator-color: var(--color-status-failed);
}
.status-soft-failed {
  --indicator-color: var(--color-status-soft-failed);
}
.status-paused {
  --indicator-color: var(--color-status-paused);
}
.status-queued {
  --indicator-color: var(--color-status-queued);
}
.status-archived {
  --indicator-color: var(--color-status-archived);
}
.status-archiving {
  --indicator-color: var(--color-status-archiving);
}
.status-cancel-requested {
  --indicator-color: var(--color-status-cancel-requested);
}
.status-requeueing {
  --indicator-color: var(--color-status-requeueing);
}
.status-under-construction {
  --indicator-color: var(--color-status-under-construction);
}

.worker-status-starting {
  --indicator-color: var(--color-worker-status-starting);
}
.worker-status-awake {
  --indicator-color: var(--color-worker-status-awake);
}
.worker-status-asleep {
  --indicator-color: var(--color-worker-status-asleep);
}
.worker-status-error {
  --indicator-color: var(--color-worker-status-error);
}
.worker-status-shutdown {
  --indicator-color: var(--color-worker-status-shutdown);
}
.worker-status-testing {
  --indicator-color: var(--color-worker-status-testing);
}
.worker-status-offline {
  --indicator-color: var(--color-worker-status-offline);
}

[class^='worker-status'] {
  color: var(--indicator-color);
  font-weight: bold;
}

.status-archiving,
.status-active,
.status-queued,
.status-under-construction,
.status-cancel-requested {
  background-color: transparent;
}
/* ... */

